[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/icons/Health_bar.png" type="Texture" id=1]
[ext_resource path="res://ui/icons/health_singal.png" type="Texture" id=2]
[ext_resource path="res://ui/ui.gd" type="Script" id=3]
[ext_resource path="res://ui/icons/money.png" type="Texture" id=4]
[ext_resource path="res://ui/theme.theme" type="Theme" id=5]
[ext_resource path="res://ui/fonts/small_font.tres" type="DynamicFont" id=7]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="HealthBar" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 26.0
mouse_filter = 2

[node name="BG" type="NinePatchRect" parent="HealthBar"]
margin_right = 64.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 26 )
patch_margin_left = 9
patch_margin_top = 7
patch_margin_right = 9
patch_margin_bottom = 7

[node name="Fill" type="TextureRect" parent="HealthBar"]
margin_left = 8.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="MoneyHUD" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -284.0
margin_bottom = 41.0
mouse_filter = 2
theme = ExtResource( 5 )

[node name="MoneyCounter" type="Label" parent="MoneyHUD"]
margin_right = 265.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "$###,###,###,###"
align = 2
valign = 1

[node name="MoneyIcon" type="TextureRect" parent="MoneyHUD"]
margin_left = 266.0
margin_right = 284.0
margin_bottom = 41.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Inventory" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -20.0
margin_right = 32.0
grow_horizontal = 2
theme = ExtResource( 5 )
alignment = 1

[node name="SeedHUD" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -9.5
margin_right = 37.5
margin_bottom = 9.5

[node name="SeedLabel" type="Label" parent="SeedHUD"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
text = " Seed:"

[node name="SeedNum" type="LineEdit" parent="SeedHUD"]
margin_left = 53.0
margin_right = 135.0
margin_bottom = 27.0
size_flags_horizontal = 4
theme = ExtResource( 5 )
editable = false
expand_to_text_length = true

[node name="VaultMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )

[node name="Panel" type="PanelContainer" parent="VaultMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -57.0
margin_right = 152.0
margin_bottom = 57.0

[node name="List" type="VBoxContainer" parent="VaultMenu/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 302.0
margin_bottom = 112.0

[node name="Title" type="Label" parent="VaultMenu/Panel/List"]
margin_right = 300.0
margin_bottom = 33.0
text = "Unlock"
align = 1

[node name="Arrows" type="HBoxContainer" parent="VaultMenu/Panel/List"]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 85.0
size_flags_vertical = 3
alignment = 1

[node name="CancelButton" type="Button" parent="VaultMenu/Panel/List"]
margin_left = 118.0
margin_top = 89.0
margin_right = 181.0
margin_bottom = 110.0
hint_tooltip = " "
size_flags_horizontal = 4
shortcut = SubResource( 2 )
text = "Cancel"

[connection signal="pressed" from="VaultMenu/Panel/List/CancelButton" to="." method="_on_CancelButton_pressed"]
